--- a/package.json
+++ b/package.json
@@ -6,10 +6,21 @@
     "dev": "remix dev"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.2.3",
+    "@mantine/core": "^5.2.3",
+    "@mantine/dates": "^5.2.3",
+    "@mantine/hooks": "^5.2.3",
+    "@mantine/notifications": "^5.2.3",
+    "@mantine/remix": "^5.2.3",
+    "@mantine/rte": "^5.2.3",
     "@remix-run/node": "^1.6.8",
     "@remix-run/react": "^1.6.8",
     "@remix-run/vercel": "^1.6.8",
     "@vercel/node": "^2.4.4",
+    "dayjs": "^1.11.5",
+    "embla-carousel-react": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
