alt routing experiment

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/node": "^2.4.4",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.1",
+    "framer-motion": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
